--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "coding",
     "ninjas"
   ],
-  "author": "Shivraj Dange",
+  "author": "Saurabh Gavhane",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
